[gd_scene load_steps=13 format=4 uid="uid://po5ybttecov5"]

[ext_resource type="PackedScene" uid="uid://4vqigtk166tx" path="res://components/levels/level_base.tscn" id="1_ikaiy"]
[ext_resource type="PackedScene" uid="uid://b4wvq5jl7y5tj" path="res://components/abilities/potted_plant/potted_plant.tscn" id="2_po47b"]
[ext_resource type="PackedScene" uid="uid://bg1md3rc8cto0" path="res://components/enemy/enemy.tscn" id="3_2ypf0"]
[ext_resource type="PackedScene" uid="uid://cg7dqu620dv2i" path="res://components/level_seg_door/level_seg_door.tscn" id="3_461c4"]
[ext_resource type="PackedScene" uid="uid://d3xidpedpjxwe" path="res://components/door/door.tscn" id="6_n8wnw"]
[ext_resource type="Script" path="res://components/levels/level_0_tutorial/tutorial_trigger.gd" id="7_kumag"]
[ext_resource type="Script" path="res://components/main/ui/tutorial_label.gd" id="8_3ctku"]
[ext_resource type="Script" path="res://components/levels/level_0_tutorial/tutorial_escape_trigger.gd" id="8_gsuft"]
[ext_resource type="Texture2D" uid="uid://uul7bt2k5cls" path="res://art/ui/logo/TMS-logo-actualpng-simple.png" id="9_nc5gn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8ji2"]
size = Vector2(20, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qc1kv"]
size = Vector2(20, 72)

[sub_resource type="LabelSettings" id="LabelSettings_1pflw"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Level" instance=ExtResource("1_ikaiy")]

[node name="LevelExit" parent="." index="0"]
position = Vector2(-256, -384)

[node name="Walls" parent="." index="4"]
tile_map_data = PackedByteArray("AAACAAQAAQACAAEAAAABAAQAAQACAAEAAAAAAAQAAQACAAEAAAD//wQAAQACAAEAAAD+/wQAAQACAAEAAAD9/wQAAQACAAEAAAD8/wQAAQACAAEAAAD7/wQAAQACAAEAAAD6/wQAAQACAAEAAAD5/wQAAQACAAEAAAD4/wQAAQACAAEAAAD3/wQAAQAEAAUAAAD4/wMAAQABAAcAAAD5/wMAAQABAAAAAAD6/wMAAQABAAAAAAD7/wMAAQABAAAAAAD8/wMAAQABAAAAAAD9/wMAAQABAAAAAAD+/wMAAQABAAAAAAD//wMAAQABAAAAAAAAAAMAAQABAAAAAAABAAMAAQABAAAAAAACAAMAAQABAAAAAAADAAMAAQABAAAAAAAEAAMAAQABAAAAAAAEAAQAAQACAAEAAAADAAQAAQACAAEAAAD3/wMAAQABAAEAAAAFAAMAAQABAAAAAAAFAAQAAQACAAEAAAD3//3/AQABAAEAAAD3//7/AQABAAEAAAD3////AQABAAEAAAD3/wAAAQABAAEAAAD3/wEAAQABAAEAAAD4/wEAAQACAAAAAAD4/wIAAQACAAAAAAD3/wIAAQABAAEAAAD4/wAAAQACAAAAAAD4////AQACAAAAAAD4//3/AQACAAAAAAD4//7/AQACAAAAAAD4//z/AQACAAAAAAD3//z/AQABAAEAAAD3//v/AQABAAEAAAAAAPv/AQABAAYAAAABAPv/AQACAAEAAAACAPv/AQACAAEAAAADAPv/AQACAAEAAAAEAPv/AQACAAEAAAAAAPz/AQACAAAAAAAAAP3/AQAFAAUAAAD4//v/AQABAAYAAAD3//r/AQABAAEAAAD4//r/AQAGAAQAAAD5//r/AQAGAAQAAAD6//r/AQAGAAQAAAD7//r/AQAGAAQAAAD8//r/AQAGAAQAAAD9//r/AQAGAAQAAAD+//r/AQAGAAQAAAD///r/AQAGAAQAAAAAAPr/AQAGAAQAAAABAPr/AQAGAAQAAAABAPn/AQAGAAQAAAAAAPn/AQAGAAQAAAD///n/AQAGAAQAAAD+//n/AQAGAAQAAAD9//n/AQAGAAQAAAD8//n/AQAGAAQAAAD7//n/AQAGAAQAAAD6//n/AQAGAAQAAAD5//n/AQAGAAQAAAD4//n/AQAGAAQAAAD3//n/AQABAAEAAAD///z/AQABAAEAAAD+//z/AQAAAA0AAAD9//z/AQAAAA0AAAD8//z/AQAAAA0AAAD7//z/AQAAAA0AAAD6//z/AQAAAA0AAAD5//z/AQAAAA0AAAD5//v/AQACAAEAAAD6//v/AQACAAEAAAD7//v/AQACAAEAAAD8//v/AQACAAEAAAD9//v/AQACAAEAAAD+//v/AQACAAEAAAD///v/AQACAAYAAAAAAP7/AQAAAA0AAAAAAP//AQAAAA0AAAAEAPr/AQAGAAQAAAADAPr/AQAGAAQAAAACAPr/AQAGAAQAAAACAPn/AQAGAAQAAAADAPn/AQAGAAQAAAAEAPn/AQAGAAQAAAAFAPn/AQAGAAQAAAAFAPr/AQAGAAQAAAAFAPv/AQACAAEAAAACAPz/AQAAAA0AAAADAPz/AQAAAA0AAAAEAP3/AQAAAA0AAAAFAP3/AQAAAA0AAAADAP3/AQAAAA0AAAACAP3/AQAAAA0AAAAEAPz/AQAAAA0AAAAFAPz/AQAAAA0AAAAGAAMAAQABAAAAAAAHAAMAAQABAAAAAAAIAAMAAQABAAAAAAAJAAMAAQABAAAAAAAKAAMAAQABAAAAAAALAAMAAQABAAAAAAAMAAMAAQABAAAAAAAMAAQAAQACAAEAAAALAAQAAQACAAEAAAAKAAQAAQACAAEAAAAIAAQAAQACAAEAAAAHAAQAAQACAAEAAAAJAAQAAQACAAEAAAAGAAQAAQACAAEAAAANAAQAAQACAAEAAAANAAMAAQACAAcAAAANAAIAAQABAAEAAAANAAEAAQABAAEAAAANAAAAAQABAAEAAAANAP//AQABAAEAAAANAP7/AQABAAEAAAANAPv/AQACAAYAAAANAPr/AQAGAAQAAAANAPn/AQABAAAAAAAOAPn/AQABAAAAAAAOAPr/AQAGAAQAAAAOAPv/AQAGAAQAAAAOAP7/AQAGAAQAAAAOAP//AQAGAAQAAAAOAAAAAQAGAAQAAAAOAAEAAQAGAAQAAAAOAAIAAQAGAAQAAAAOAAMAAQAGAAQAAAAOAAQAAQACAAEAAAAHAPv/AQACAAEAAAAHAPr/AQAGAAQAAAAHAPn/AQAGAAQAAAAGAPr/AQAGAAQAAAAGAPv/AQACAAEAAAAGAPn/AQAGAAQAAAAPAPP/AQACAAEAAAAPAPL/AQAGAAQAAAAOAPP/AQACAAEAAAAOAPL/AQAGAAQAAAANAPP/AQACAAEAAAANAPL/AQAGAAQAAAAMAPL/AQABAAEAAAAJAPP/AQACAAAAAAAJAPL/AQACAAAAAAAIAPP/AQAGAAQAAAAIAPL/AQAGAAQAAAAPAPn/AQABAAAAAAAQAPn/AQABAAAAAAARAPn/AQABAAAAAAASAPn/AQABAAAAAAATAPn/AQABAAAAAAAQAPr/AQAGAAQAAAAPAPr/AQAGAAQAAAARAPr/AQAGAAQAAAASAPr/AQAGAAQAAAATAPr/AQAGAAQAAAAIAPT/AQAGAAQAAAANAPX/AQAAAA0AAAAOAPX/AQAAAA0AAAAOAPT/AQAAAA0AAAAPAPT/AQAAAA0AAAANAPT/AQAAAA0AAAAPAPX/AQAAAA0AAAAIAPX/AQAGAAQAAAATAPL/AQAGAAQAAAASAPL/AQAGAAQAAAARAPL/AQAGAAQAAAAQAPL/AQAGAAQAAAAQAPP/AQACAAEAAAARAPP/AQACAAEAAAASAPP/AQACAAEAAAATAPP/AQACAAEAAAAQAPX/AQAAAA0AAAARAPX/AQAAAA0AAAASAPX/AQAAAA0AAAATAPX/AQAAAA0AAAATAPT/AQAAAA0AAAASAPT/AQAAAA0AAAARAPT/AQAAAA0AAAAQAPT/AQAAAA0AAAAGAPz/AQAAAA0AAAAGAP3/AQAAAA0AAAAHAPz/AQAAAA0AAAAHAP3/AQAAAA0AAAAIAPD/AQABAAAAAAAIAPH/AQAGAAQAAAAIAPn/AQAGAAQAAAAIAPr/AQAGAAQAAAAIAPv/AQACAAEAAAAIAPz/AQAAAA0AAAAIAP3/AQAAAA0AAAAJAPD/AQAFAAQAAAAJAPH/AQACAAAAAAAJAPv/AQAFAAUAAAAJAPz/AQAAAA0AAAAJAP3/AQAAAA0AAAAMAPD/AQAEAAQAAAAMAPH/AQABAAEAAAAMAPv/AQAEAAUAAAAMAPz/AQAAAA0AAAAMAP3/AQAAAA0AAAANAPD/AQABAAAAAAANAPH/AQAGAAQAAAAOAPD/AQABAAAAAAAOAPH/AQAGAAQAAAAPAPD/AQABAAAAAAAPAPH/AQAGAAQAAAAPAPv/AQAGAAQAAAAQAPD/AQABAAAAAAAQAPH/AQAGAAQAAAAQAPv/AQAGAAQAAAARAPD/AQABAAAAAAARAPH/AQAGAAQAAAARAPv/AQAGAAQAAAASAPD/AQABAAAAAAASAPH/AQAGAAQAAAASAPv/AQAGAAQAAAATAPD/AQABAAAAAAATAPH/AQAGAAQAAAATAPv/AQAGAAQAAAAUAPD/AQABAAAAAAAUAPH/AQAGAAQAAAAUAPL/AQAGAAQAAAAUAPP/AQACAAEAAAAUAPT/AQAAAA0AAAAUAPX/AQAAAA0AAAAUAPn/AQABAAAAAAAUAPr/AQAGAAQAAAAUAPv/AQAGAAQAAAAVAPD/AQABAAAAAAAVAPH/AQAGAAQAAAAVAPL/AQAGAAQAAAAVAPP/AQACAAEAAAAVAPT/AQAAAA0AAAAVAPX/AQAAAA0AAAAVAPn/AQABAAAAAAAVAPr/AQAGAAQAAAAVAPv/AQAGAAQAAAAWAPD/AQABAAAAAAAWAPH/AQAGAAQAAAAWAPL/AQAGAAQAAAAWAPP/AQACAAEAAAAWAPT/AQAAAA0AAAAWAPX/AQAAAA0AAAAWAPn/AQABAAAAAAAWAPr/AQAGAAQAAAAWAPv/AQAGAAQAAAAXAPD/AQABAAAAAAAXAPH/AQAGAAQAAAAXAPL/AQAGAAQAAAAXAPP/AQACAAEAAAAXAPT/AQAAAA0AAAAXAPX/AQAAAA0AAAAXAPn/AQABAAAAAAAXAPr/AQAGAAQAAAAXAPv/AQAGAAQAAAAYAPD/AQABAAAAAAAYAPH/AQAGAAQAAAAYAPL/AQABAAYAAAAYAPP/AQAFAAUAAAAYAPT/AQAAAA0AAAAYAPX/AQAAAA0AAAAYAPn/AQABAAAAAAAYAPr/AQAGAAQAAAAYAPv/AQAGAAQAAAAZAPD/AQABAAAAAAAZAPH/AQAGAAQAAAAZAPL/AQACAAEAAAAZAPP/AQAAAA0AAAAZAPT/AQAAAA0AAAAZAPn/AQABAAAAAAAZAPr/AQAGAAQAAAAZAPv/AQAGAAQAAAAaAPD/AQABAAAAAAAaAPH/AQAGAAQAAAAaAPL/AQACAAEAAAAaAPP/AQAAAA0AAAAaAPT/AQAAAA0AAAAaAPn/AQABAAAAAAAaAPr/AQAGAAQAAAAaAPv/AQAGAAQAAAAbAPD/AQABAAAAAAAbAPH/AQAGAAQAAAAbAPL/AQACAAEAAAAbAPP/AQAAAA0AAAAbAPT/AQAAAA0AAAAbAPn/AQABAAAAAAAbAPr/AQAGAAQAAAAbAPv/AQAGAAQAAAAcAPD/AQABAAAAAAAcAPH/AQAGAAQAAAAcAPL/AQACAAEAAAAcAPP/AQAAAA0AAAAcAPT/AQAAAA0AAAAcAPn/AQABAAAAAAAcAPr/AQAGAAQAAAAcAPv/AQAGAAQAAAAdAPD/AQABAAAAAAAdAPH/AQAGAAQAAAAdAPL/AQACAAEAAAAdAPP/AQAAAA0AAAAdAPT/AQAAAA0AAAAdAPn/AQABAAAAAAAdAPr/AQAGAAQAAAAdAPv/AQAGAAQAAAAeAPD/AQABAAAAAAAeAPH/AQAGAAQAAAAeAPL/AQACAAEAAAAeAPP/AQAAAA0AAAAeAPT/AQAAAA0AAAAeAPn/AQABAAAAAAAeAPr/AQAGAAQAAAAeAPv/AQAGAAQAAAAfAPD/AQABAAAAAAAfAPH/AQAGAAQAAAAfAPL/AQACAAEAAAAfAPP/AQAAAA0AAAAfAPT/AQAAAA0AAAAfAPn/AQABAAAAAAAfAPr/AQAGAAQAAAAfAPv/AQAGAAQAAAAgAPD/AQABAAAAAAAgAPH/AQAGAAQAAAAgAPL/AQACAAEAAAAgAPP/AQAAAA0AAAAgAPT/AQAAAA0AAAAgAPn/AQABAAAAAAAgAPr/AQAGAAQAAAAgAPv/AQAGAAQAAAAhAPD/AQABAAAAAAAhAPH/AQAGAAQAAAAhAPL/AQACAAEAAAAhAPP/AQAAAA0AAAAhAPT/AQAAAA0AAAAhAPn/AQABAAAAAAAhAPr/AQAGAAQAAAAhAPv/AQAGAAQAAAAiAPD/AQABAAAAAAAiAPH/AQAGAAQAAAAiAPL/AQACAAYAAAAiAPP/AQAEAAUAAAAiAPT/AQAAAA0AAAAiAPX/AQAAAA0AAAAiAPn/AQABAAAAAAAiAPr/AQAGAAQAAAAiAPv/AQAGAAQAAAAjAPD/AQABAAAAAAAjAPH/AQAGAAQAAAAjAPL/AQAGAAQAAAAjAPP/AQACAAEAAAAjAPT/AQAAAA0AAAAjAPX/AQAAAA0AAAAjAPn/AQABAAAAAAAjAPr/AQAGAAQAAAAjAPv/AQAGAAQAAAAkAPD/AQABAAAAAAAkAPH/AQAGAAQAAAAkAPL/AQAGAAQAAAAkAPP/AQACAAEAAAAkAPT/AQAAAA0AAAAkAPX/AQAAAA0AAAAkAPn/AQABAAAAAAAkAPr/AQAGAAQAAAAkAPv/AQAGAAQAAAAlAPD/AQABAAAAAAAlAPH/AQAGAAQAAAAlAPL/AQAGAAQAAAAlAPP/AQACAAEAAAAlAPT/AQAAAA0AAAAlAPX/AQAAAA0AAAAlAPn/AQABAAAAAAAlAPr/AQAGAAQAAAAlAPv/AQAGAAQAAAAmAPD/AQABAAAAAAAmAPH/AQAGAAQAAAAmAPL/AQAGAAQAAAAmAPP/AQACAAEAAAAmAPT/AQAAAA0AAAAmAPX/AQAAAA0AAAAmAPn/AQABAAAAAAAmAPr/AQAGAAQAAAAmAPv/AQAGAAQAAAAnAPD/AQABAAAAAAAnAPH/AQAGAAQAAAAnAPL/AQAGAAQAAAAnAPP/AQACAAEAAAAnAPT/AQAAAA0AAAAnAPX/AQAAAA0AAAAnAPn/AQABAAAAAAAnAPr/AQAGAAQAAAAnAPv/AQAGAAQAAAAoAPD/AQABAAAAAAAoAPH/AQAGAAQAAAAoAPL/AQAGAAQAAAAoAPP/AQACAAEAAAAoAPT/AQAAAA0AAAAoAPX/AQAAAA0AAAAoAPn/AQABAAAAAAAoAPr/AQAGAAQAAAAoAPv/AQAGAAQAAAApAPD/AQABAAAAAAApAPH/AQAGAAQAAAApAPL/AQAGAAQAAAApAPP/AQACAAEAAAApAPT/AQAAAA0AAAApAPX/AQAAAA0AAAApAPn/AQABAAAAAAApAPr/AQAGAAQAAAApAPv/AQAGAAQAAAAqAPD/AQABAAAAAAAqAPH/AQAGAAQAAAAqAPL/AQAGAAQAAAAqAPP/AQACAAEAAAAqAPT/AQAAAA0AAAAqAPX/AQAAAA0AAAAqAPn/AQABAAAAAAAqAPr/AQAGAAQAAAAqAPv/AQAGAAQAAAArAPD/AQABAAAAAAArAPH/AQAGAAQAAAArAPL/AQAGAAQAAAArAPP/AQACAAEAAAArAPT/AQAAAA0AAAArAPX/AQAAAA0AAAArAPn/AQABAAAAAAArAPr/AQAGAAQAAAArAPv/AQAGAAQAAAAsAPD/AQABAAAAAAAsAPH/AQAGAAQAAAAsAPL/AQAGAAQAAAAsAPP/AQACAAEAAAAsAPT/AQAAAA0AAAAsAPX/AQAAAA0AAAAsAPn/AQABAAAAAAAsAPr/AQAGAAQAAAAsAPv/AQAGAAQAAAAtAPD/AQABAAAAAAAtAPH/AQAGAAQAAAAtAPL/AQAGAAQAAAAtAPP/AQACAAEAAAAtAPT/AQAAAA0AAAAtAPX/AQAAAA0AAAAtAPn/AQABAAAAAAAtAPr/AQAGAAQAAAAtAPv/AQAGAAQAAAAuAPD/AQABAAAAAAAuAPH/AQAGAAQAAAAuAPL/AQAGAAQAAAAuAPP/AQACAAEAAAAuAPT/AQAAAA0AAAAuAPX/AQAAAA0AAAAuAPn/AQABAAAAAAAuAPr/AQAGAAQAAAAuAPv/AQAGAAQAAAAvAPD/AQABAAAAAAAvAPH/AQAGAAQAAAAvAPL/AQAGAAQAAAAvAPP/AQACAAEAAAAvAPT/AQAAAA0AAAAvAPX/AQAAAA0AAAAvAPn/AQABAAAAAAAvAPr/AQAGAAQAAAAvAPv/AQAGAAQAAAAwAPD/AQABAAAAAAAwAPH/AQABAAYAAAAwAPL/AQACAAAAAAAwAPP/AQAFAAUAAAAwAPT/AQAAAA0AAAAwAPX/AQAAAA0AAAAwAPn/AQABAAAAAAAwAPr/AQAGAAQAAAAwAPv/AQAGAAQAAAAxAPD/AQAFAAQAAAAxAPH/AQAFAAUAAAAxAPL/AQAAAA0AAAAxAPP/AQAAAA0AAAAxAPn/AQABAAAAAAAxAPr/AQAGAAQAAAAxAPv/AQAGAAQAAAAyAPn/AQABAAAAAAAyAPr/AQAGAAQAAAAyAPv/AQAGAAQAAAAzAPn/AQABAAAAAAAzAPr/AQAGAAQAAAAzAPv/AQAGAAQAAAA0APD/AQAEAAQAAAA0APH/AQAEAAUAAAA0APL/AQAAAA0AAAA0APP/AQAAAA0AAAA0APn/AQABAAAAAAA0APr/AQAGAAQAAAA0APv/AQAGAAQAAAA1APD/AQABAAAAAAA1APH/AQACAAYAAAA1APL/AQABAAEAAAA1APP/AQABAAEAAAA1APT/AQABAAEAAAA1APX/AQABAAEAAAA1APb/AQABAAEAAAA1APf/AQABAAEAAAA1APj/AQABAAEAAAA1APn/AQACAAcAAAA1APr/AQAGAAQAAAA1APv/AQAGAAQAAAA2APD/AQAFAAQAAAA2APH/AQACAAAAAAA2APL/AQACAAAAAAA2APP/AQACAAAAAAA2APT/AQACAAAAAAA2APX/AQACAAAAAAA2APb/AQACAAAAAAA2APf/AQACAAAAAAA2APj/AQACAAAAAAA2APn/AQACAAAAAAA2APr/AQACAAAAAAA2APv/AQACAAAAAAAPAPz/AQABAAYAAAAPAP3/AQACAAAAAAAPAP7/AQACAAAAAAAPAP//AQACAAAAAAAPAAAAAQACAAAAAAAPAAEAAQACAAAAAAAPAAIAAQACAAAAAAAPAAMAAQACAAAAAAAPAAQAAQAFAAUAAAANAPz/AQABAAEAAAAOAPz/AQAGAAQAAAAOAP3/AQAGAAQAAAANAP3/AQABAAEAAAAMAPr/AQABAAEAAAAMAPn/AQAEAAQAAAAJAPn/AQACAAAAAAAJAPr/AQACAAAAAAAJAPj/AQACAAAAAAAJAPf/AQACAAAAAAAJAPb/AQACAAAAAAAJAPX/AQACAAAAAAAJAPT/AQACAAAAAAAIAPb/AQAGAAQAAAAIAPf/AQAGAAQAAAAIAPj/AQAGAAQAAAAMAPP/AQAEAAUAAAAMAPX/AQAAAA0AAAAMAPT/AQAAAA0AAAAHAPj/AQACAAcAAAAGAPj/AQABAAAAAAAFAPj/AQABAAAAAAAEAPj/AQABAAAAAAADAPj/AQABAAAAAAACAPj/AQABAAAAAAABAPj/AQABAAAAAAAAAPj/AQABAAAAAAD///j/AQABAAAAAAD+//j/AQABAAAAAAD9//j/AQABAAAAAAD8//j/AQABAAAAAAD7//j/AQABAAAAAAD6//j/AQABAAAAAAD5//j/AQABAAAAAAD4//j/AQABAAAAAAD3//j/AQAEAAQAAAAHAPf/AQABAAEAAAAHAPb/AQABAAEAAAAHAPX/AQABAAEAAAAHAPT/AQABAAEAAAAHAPP/AQABAAEAAAAHAPL/AQABAAEAAAAHAPH/AQABAAEAAAAHAPD/AQAEAAQAAAA2APz/AQAFAAUAAAA1APz/AQACAAEAAAA0APz/AQACAAEAAAAzAPz/AQACAAEAAAAyAPz/AQACAAEAAAAxAPz/AQACAAEAAAAwAPz/AQACAAEAAAAvAPz/AQACAAEAAAAuAPz/AQACAAEAAAAtAPz/AQACAAEAAAAsAPz/AQACAAEAAAArAPz/AQACAAEAAAAqAPz/AQACAAEAAAApAPz/AQACAAEAAAAoAPz/AQACAAEAAAAnAPz/AQACAAEAAAAmAPz/AQACAAEAAAAlAPz/AQACAAEAAAAkAPz/AQACAAEAAAAjAPz/AQACAAEAAAAiAPz/AQACAAEAAAAhAPz/AQACAAEAAAAgAPz/AQACAAEAAAAfAPz/AQACAAEAAAAeAPz/AQACAAEAAAAdAPz/AQACAAEAAAAcAPz/AQACAAEAAAAbAPz/AQACAAEAAAAaAPz/AQACAAEAAAAZAPz/AQACAAEAAAAYAPz/AQACAAEAAAAXAPz/AQACAAEAAAAWAPz/AQACAAEAAAAVAPz/AQACAAEAAAAUAPz/AQACAAEAAAATAPz/AQACAAEAAAASAPz/AQACAAEAAAARAPz/AQACAAEAAAAQAPz/AQACAAEAAAAAAAAAAQAAAA0AAAD//wAAAQAAAA0AAAD/////AQAAAA0AAAD///7/AQAAAA0AAAD///3/AQAEAAUAAAABAP3/AQAAAA0AAAABAPz/AQAAAA0AAAD5//3/AQAAAA0AAAD6//3/AQAAAA0AAAD7//3/AQAAAA0AAAD8//3/AQAAAA0AAAD9//3/AQAAAA0AAAD+//3/AQAAAA0AAAA=")

[node name="Segment1" parent="." index="5"]
segment_name = "SCPD Ship"

[node name="LevelBounds" parent="Segment1" index="0"]
position = Vector2(368, -72)
size = Vector2(1050, 330)

[node name="PlayerStartPoint" parent="Segment1" index="1"]
position = Vector2(-32, 24)

[node name="LevelSegmentDoor" parent="Segment1" index="2" instance=ExtResource("3_461c4")]
position = Vector2(816, -192)

[node name="Door" parent="Segment1" index="3" instance=ExtResource("6_n8wnw")]
position = Vector2(176, -192)
rotation = 1.57079

[node name="TutorialEnemy" parent="Segment1" index="4" instance=ExtResource("3_2ypf0")]
unique_name_in_owner = true
process_mode = 4
position = Vector2(816, -136)
rotation = -1.57079
collision_mask = 0
move_type = 2
move_speed = 0.0
move_positions = Array[Vector2]([Vector2(176, -136), Vector2(176, -100000)])
detection_angle = 40.0

[node name="TutorialTrigger" type="Area2D" parent="Segment1" index="5"]
position = Vector2(392, -144)
script = ExtResource("7_kumag")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segment1/TutorialTrigger" index="0"]
shape = SubResource("RectangleShape2D_m8ji2")

[node name="TutorialEscapeTrigger" type="Area2D" parent="Segment1" index="6"]
position = Vector2(568, -136)
script = ExtResource("8_gsuft")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segment1/TutorialEscapeTrigger" index="0"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_qc1kv")

[node name="PottedPlant" parent="Segment1" index="7" instance=ExtResource("2_po47b")]
position = Vector2(496, -176)

[node name="CanvasLayer" type="CanvasLayer" parent="Segment1" index="8"]

[node name="TutorialLabel" type="Label" parent="Segment1/CanvasLayer" index="0" groups=["TutorialLabel"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -254.0
offset_top = -88.0
offset_right = 254.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(254, 20)
text = "Press [E] near the plant !!!"
label_settings = SubResource("LabelSettings_1pflw")
horizontal_alignment = 1
script = ExtResource("8_3ctku")

[node name="GameLogo" type="TextureRect" parent="Segment1/CanvasLayer" index="1"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -485.0
offset_top = -205.0
offset_right = 485.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(485, 205)
texture = ExtResource("9_nc5gn")

[connection signal="body_entered" from="Segment1/TutorialTrigger" to="Segment1/TutorialTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="Segment1/TutorialEscapeTrigger" to="Segment1/TutorialEscapeTrigger" method="_on_body_entered"]
